--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: hAKLand
+title: HackLand
 email: info@aucklandhackspace.nz
 url: https://aucklandhackspace.nz
 description: "A nest of tech, art, creativity and freedom"
@@ -10,7 +10,7 @@ color:
   links: '#219ab3'
 
 # Footer settings
-footer: hAKLand.nz
+footer: HackLand.nz
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
