--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social:
   - title: facebook
     url: https://facebook.com/AuckHackspace/
   - title: github
-    url: https://github.com/AucklandHackspace/
+    url: https://github.com/HakLand/
 
 # Build settings
 markdown: kramdown
