--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: HackLand
 email: info@aucklandhackspace.nz
-url: https://aucklandhackspace.nz
+url: http://hackland.nz/
 description: "A nest of tech, art, creativity and freedom"
 
 # Color settings (hex-codes without the leading hash-tag)
