clearer membership & access

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ footer: HackLand.nz
 social:
   - title: slack
     url: https://join.slack.com/hakland/shared_invite/MTkwOTk4MDI5NjUwLTE0OTYzMDE0NDYtNGNmMDMxZGUxNw
+  - title: meetup
+    url: https://www.meetup.com/HackLand/
   - title: facebook
     url: https://facebook.com/AuckHackspace/
   - title: github
