minor tweaks - update slack link, update descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer: HackLand.nz
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: slack
-    url: https://join.slack.com/hakland/shared_invite/MTkwOTk4MDI5NjUwLTE0OTYzMDE0NDYtNGNmMDMxZGUxNw
+    url: https://join.slack.com/t/hakland/shared_invite/zt-2fqramvm-UY8p_R49~Q1EKQfYgzcjKA
   - title: github
     url: https://github.com/HakLand/
   - title: twitter
