--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            'Hackland'
 tagline:          ''
-description:      'Hackland'
+description:      'A makerspace in Auckland'
 url:              hackland.nz
 baseurl:          ''
 
