Switch from jekyll-paginate-v2 to jekyll-paginate
jekyll-paginate-v2 is not on the GitHub pages ruby gem whitelist, which may explain why the website blog entries don't work.

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ collections:
   notes:
     output: true
   
-plugins: ['jekyll-paginate-v2', 'jekyll-seo-tag', 'jekyll-sitemap']
+plugins: ['jekyll-paginate', 'jekyll-seo-tag', 'jekyll-sitemap']
 
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
